--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@stripe/stripe-react-native": "^0.37.2",
     "react": "18.2.0",
     "react-native": "0.73.6"
   },
